♻️ refactor[#1] 현재 사용하지 않는 의존성 및 설정 주석처리
- application.yml 의 사용하지 않는 설정 주석처리
- build.gradle 의 사용하지 않는 의존성 주석처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,21 +3,22 @@ spring:
     name: review
   profiles:
     active: dev
-  config:
-    import: "configserver:http://localhost:18080"
+#  config:
+#    import: "configserver:http://localhost:18080"
+#    import: optional:file:.env[.properties]
 
 server:
   port: 19097
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:19090/eureka/
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:19090/eureka/
 
-message: "default message" # config server? ???? ?? ?
+#message: "default message" # config server? ???? ?? ?
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: refresh
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: refresh
