--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ ext {
 
 dependencies {
 
+	// H2
+	runtimeOnly 'com.h2database:h2'
+
 	// swagger
 //	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 //	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.15.0'
