--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,17 @@ spring:
 #  config:
 #    import: "configserver:http://localhost:18080"
 #    import: optional:file:.env[.properties]
-
+  datasource:
+    url: jdbc:h2:~/test
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create
 server:
   port: 19097
 
