--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: review
   profiles:
     active: dev
-#  config:
-#    import: "configserver:http://localhost:18080"
-#    import: optional:file:.env[.properties]
+  #  config:
+  #    import: "configserver:http://localhost:18080"
+  #    import: optional:file:.env[.properties]
   datasource:
     url: jdbc:h2:~/test
     username: sa
@@ -17,6 +17,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 server:
   port: 19097
 
