--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ ext {
 }
 
 dependencies {
+    //QueryDsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     // mockito-inline
     testImplementation group: 'org.mockito', name: 'mockito-inline', version: '4.9.0'
@@ -51,8 +56,8 @@ dependencies {
 //	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 
     // redis
-//	implementation 'org.springframework.session:spring-session-data-redis'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.session:spring-session-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // security
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -84,4 +89,21 @@ dependencyManagement {
 }
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+/**
+ * QueryDSL Build Options
+ */
+def querydslDir = "src/main/generated"
+
+sourceSets {
+    main.java.srcDirs += [ querydslDir ]
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
+}
+
+clean.doLast {
+    file(querydslDir).deleteDir()
 }
