--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,29 @@
-# 파일 규격 버전
 version: "3.1"
 
-# 실행하려는 컨테이너들 정의
 services:
-  # 서비스명
   redis_container:
-    # 사용할 이미지
     image: redis:latest
-    # 컨테이너명
-    container_name: redis_test
-    # 접근 포트 설정(컨테이너 외부:컨테이너 내부)
+    container_name: redis
     ports:
       - ${REDIS_BINDING_PORT}:${REDIS_PORT}
-    # 스토리지 마운트(볼륨) 설정
     volumes:
       - ${REDIS_DATA_PATH}:/data
       - ${REDIS_DEFAULT_CONFIG_FILE}:/usr/local/conf/redis.conf
-    # 컨테이너에 docker label을 이용해서 메타데이터 추가
     labels:
       - "name=redis"
       - "mode=standalone"
-    # 컨테이너 종료시 재시작 여부 설정
     restart: always
     command: redis-server /usr/local/conf/redis.conf
+
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - ${POSTGRES_BINDING_PORT}:${POSTGRES_PORT}
+    volumes:
+      - ${POSTGRES_DATA_PATH}:/var/lib/postgresql/data
+    restart: always
