🔨 script[#22] : eureka 의존성 추가 및 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,10 +33,10 @@ reservation:
     url: http://localhost:${RESERVATION_SERVICE_PORT}
 
 
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://localhost:19090/eureka/
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:19090/eureka/
 
 #message: "default message" # config server? ???? ?? ?
 
