♻️ refactor[#26] : 배포환경 설정

--- a/build.gradle
+++ b/build.gradle
@@ -104,3 +104,7 @@ tasks.withType(JavaCompile).configureEach {
 clean.doLast {
     file(querydslDir).deleteDir()
 }
+
+bootJar {
+    archiveFileName = 'review.jar'
+}
