--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,10 @@
 server:
   port: 19097
+  address: 0.0.0.0
 
 spring:
   application:
     name: review
-  profiles:
-    active: dev
   config:
     import: optional:file:.env[.properties]
   #    import: "configserver:http://localhost:18080"
@@ -13,20 +12,20 @@ spring:
     driver-class-name: org.postgresql.Driver
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
-    url: jdbc:postgresql://localhost:${POSTGRES_BINDING_PORT}/${POSTGRES_DB}
-
+    url: jdbc:postgresql://team26.cxqqm2i6ohrd.ap-northeast-2.rds.amazonaws.com:5432/${POSTGRES_DB}?currentSchema=reviews
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
+        default_schema: reviews
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
         format_sql: true
   data:
     redis:
-      host: localhost
-      port: ${REDIS_BINDING_PORT}
+      host: team26redis-3bjj75.serverless.apn2.cache.amazonaws.com
+      port: ${REDIS_PORT}
 
 reservation:
   service:
@@ -36,12 +35,12 @@ reservation:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:19090/eureka/
+      defaultZone: http://43.203.174.245:19090/eureka/
 
-#message: "default message" # config server? ???? ?? ?
+message: "default message" # config server? ???? ?? ?
 
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: refresh
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
